# it-jobs-analytics

./: .env.example  .gitignore  README.md  pyproject.toml
src/: settings.py
