[project]
name = "it-jobs-analytics"
version = "0.1.0"
description = "Analytics for categorizing IT jobs and extracting required technologies."
authors = [
    {name = "ilarionkuleshov",email = "ilarion.kuleshov@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "fastcrawl (>=0.5.0,<1.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "openai (>=1.75.0,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
autoflake = "^2.3.1"
black = "^25.1.0"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
pylint = "^3.3.6"
mypy = "^1.15.0"

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.autoflake]
remove-all-unused-imports = true
recursive = true
remove-unused-variables = true
ignore-init-module-imports = true
in-place = true

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120

[tool.pylint]
init-hook = "import sys; sys.path.extend(['src']);"
py-version = "3.12"
max-line-length = "120"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
plugins = "pydantic.mypy"
